--- a/CSharp Robotics Library/CSharpRoboticsLib.csproj
+++ b/CSharp Robotics Library/CSharpRoboticsLib.csproj
@@ -65,10 +65,11 @@
   <ItemGroup>
     <Compile Include="Autonomous\AutonCommand.cs" />
     <Compile Include="Autonomous\AutonReporter.cs" />
-    <Compile Include="Autonomous\AutonScheduler.cs" />
+    <Compile Include="Autonomous\AutonRoutine.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
+    <Compile Include="Extras\EnhancedDigitalInput.cs" />
     <Compile Include="Extras\ManagedCompressor.cs" />
     <Compile Include="Extras\RampMotor.cs" />
     <Compile Include="Extras\Utility.cs" />
