AutonSelector as well as cleaning up namespaces
when will the autonomous library ideas stop......

--- a/CSharp Robotics Library/CSharpRoboticsLib.csproj
+++ b/CSharp Robotics Library/CSharpRoboticsLib.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Autonomous\AutonCommand.cs" />
     <Compile Include="Autonomous\AutonReporter.cs" />
     <Compile Include="Autonomous\AutonRoutine.cs" />
+    <Compile Include="Autonomous\AutonSelector.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
