Finally changed all the namespaces
didn't know that right click -> rename worked across files on
namespaces..........
also continuing unit tests, almost done with flow control. Having a bit
of trouble with ChangeTrigger.
Renaming member variables and such to be standard across the project,
almost done with that.
Changed assembly and default namespace to have no spaces.
Renaming and fixing typos where necessary.
probably other stuff I can't remember.

--- a/CSharp Robotics Library/CSharpRoboticsLib.csproj
+++ b/CSharp Robotics Library/CSharpRoboticsLib.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{08792B9C-AB04-4FD0-A52A-D3A864D9758A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CSharp_Robotics_Library</RootNamespace>
-    <AssemblyName>CSharp Robotics Library</AssemblyName>
+    <RootNamespace>CSharpRoboticsLib</RootNamespace>
+    <AssemblyName>CSharpRoboticsLib</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
