Made an inputFilter test
changed GetValue() to a read-only property Value.
added a const BufferLength, in case anyone needs it.
All tests passed on my computer.

--- a/NILabviewTests/NILabviewTests.csproj
+++ b/NILabviewTests/NILabviewTests.csproj
@@ -57,7 +57,7 @@
   <ItemGroup>
     <Compile Include="DerivativeTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest2.cs" />
+    <Compile Include="InputFilterTest.cs" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
