Working on that generic tank drive stuff

--- a/CSharp Robotics Library/CSharpRoboticsLib.csproj
+++ b/CSharp Robotics Library/CSharpRoboticsLib.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Autonomous\AutonReporter.cs" />
     <Compile Include="Autonomous\AutonRoutine.cs" />
     <Compile Include="Autonomous\AutonSelector.cs" />
+    <Compile Include="Autonomous\DriveCommands\Interfaces\IEncoderDrive.cs" />
+    <Compile Include="Autonomous\DriveCommands\Interfaces\IGyroscopeDrive.cs" />
+    <Compile Include="Autonomous\DriveCommands\Interfaces\ITankDrive.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
