Worked on that Autonomous stuff, added Update class
If this Update class does work, it is going to be beautiful.
also there's a cool new EnhancedEncoder.
also also, it turns out I can't use command based robot's stuff for my
autonomous framework because everything I need is protected and/or
internal.

--- a/CSharp Robotics Library/CSharpRoboticsLib.csproj
+++ b/CSharp Robotics Library/CSharpRoboticsLib.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
     <Compile Include="Extras\EnhancedDigitalInput.cs" />
+    <Compile Include="Extras\EnhancedEncoder.cs" />
     <Compile Include="Extras\ManagedCompressor.cs" />
     <Compile Include="Extras\RampMotor.cs" />
     <Compile Include="Extras\Utility.cs" />
