--- a/ControlSystemsTests/ControlSystemsTests.csproj
+++ b/ControlSystemsTests/ControlSystemsTests.csproj
@@ -35,9 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSharpRoboticsLib">
-      <HintPath>..\CSharp Robotics Library\bin\Debug\CSharpRoboticsLib.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=3.0.5797.27534, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.0.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -62,6 +59,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CSharp Robotics Library\CSharpRoboticsLib.csproj">
+      <Project>{08792b9c-ab04-4fd0-a52a-d3a864d9758a}</Project>
+      <Name>CSharpRoboticsLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
