--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,6 @@ os: Visual Studio 2015
 configuration: Release
 install:
 - cmd: >-
-    nuget restore
 
     appveyor DownloadFile https://github.com/nunit/nunit/releases/download/3.0.0/NUnit-3.0.0.zip
 
@@ -22,10 +21,6 @@ test_script:
 - .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\ControlSystemsTests\Output\ControlSystemsTests.dll --framework=net-4.0 " -filter:"+[*]* -[ControlSystemsTests.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput -returntargetcode
 - .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\NILabviewTests\Output\NILabviewTests.dll --framework=net-4.0 " -filter:"+[*]* -[NILabviewTests.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput
 
-- ps >-
-  $wc = New-Object 'System.Net.WebClient'
-  $wc.UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestResult.xml))
-
 - cmd: >-
 
 - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
@@ -37,7 +32,7 @@ on_success:
     
     If (($env:APPVEYOR_REPO_BRANCH -eq "master") -and (!$env:APPVEYOR_PULL_REQUEST_NUMBER)) {
 
-    ./nuget pack "$env:APPVEYOR_BUILD_FOLDER\CSharp Robotics Library\CSharpRoboticsLib.csproj" -Properties "Configuration=Release;Platform=AnyCPU" -Symbols
+    nuget pack "$env:APPVEYOR_BUILD_FOLDER\CSharp Robotics Library\CSharpRoboticsLib.csproj" -Properties "Configuration=Release;Platform=AnyCPU" -Symbols
 
     Get-ChildItem .\*.nupkg | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
     }
