--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,9 +17,9 @@ build:
 test_script:
 - nuget install OpenCover -Version 4.6.166 -OutputDirectory packages
 
-- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\FlowControlTests\Output\FlowControlTests.dll --framework=net-4.0 " -filter:"-[*Test.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput -returntargetcode
-- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\ControlSystemsTests\Output\ControlSystemsTests.dll --framework=net-4.0 " -filter:"-[*Test.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput -returntargetcode
-- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\NILabviewTests\Output\NILabviewTests.dll --framework=net-4.0 " -filter:"-[*Test.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput
+- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\FlowControlTests\Output\FlowControlTests.dll --framework=net-4.0 " -filter:"+[*]* -[*Test.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput -returntargetcode
+- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\ControlSystemsTests\Output\ControlSystemsTests.dll --framework=net-4.0 " -filter:"+[*]* -[*Test.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput -returntargetcode
+- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\NILabviewTests\Output\NILabviewTests.dll --framework=net-4.0 " -filter:"+[*]* -[*Test.*]*" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput
 
 - cmd: >-
 
