--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,12 @@
 version: 2016.0.0.{build}
 os: Visual Studio 2015
 configuration: Release
+assembly_info:
+  patch: true
+  file: '**\AssemblyInfo.*'
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
 install:
 - cmd: >-
 
