--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\FRC.WPILib.2015.0.11\build\FRC.WPILib.props" Condition="Exists('..\packages\FRC.WPILib.2015.0.11\build\FRC.WPILib.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -33,20 +32,24 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HAL-Base, Version=2015.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FRC.WPILib.2015.0.11\lib\net45\HAL-Base.dll</HintPath>
+    <Reference Include="HAL-Base, Version=2016.0.0.116, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.116\lib\net45\HAL-Base.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="HAL-RoboRIO, Version=2015.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FRC.WPILib.2015.0.11\lib\net45\HAL-RoboRIO.dll</HintPath>
+    <Reference Include="HAL-RoboRIO, Version=2016.0.0.116, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.116\lib\net45\HAL-RoboRIO.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="HAL-Simulation, Version=2015.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FRC.WPILib.2015.0.11\lib\net45\HAL-Simulation.dll</HintPath>
+    <Reference Include="HAL-Simulation, Version=2016.0.0.116, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.116\lib\net45\HAL-Simulation.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NetworkTables, Version=2015.2.0.74, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FRC.NetworkTables.2015.2.0.74\lib\net45\NetworkTables.dll</HintPath>
+    <Reference Include="NetworkTables, Version=2016.0.0.124, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.NetworkTables.2016.0.0.124\lib\net45\NetworkTables.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NIVision, Version=2016.0.0.116, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.116\lib\net45\NIVision.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -57,8 +60,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WPILib, Version=2015.0.11.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FRC.WPILib.2015.0.11\lib\net45\WPILib.dll</HintPath>
+    <Reference Include="WPILib, Version=2016.0.0.116, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.116\lib\net45\WPILib.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -94,14 +97,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\FRC.WPILib.2015.0.11\build\FRC.WPILib.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\FRC.WPILib.2015.0.11\build\FRC.WPILib.props'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
