--- a/IndependentTests/IndependentTests.csproj
+++ b/IndependentTests/IndependentTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{EE2DAF52-D3F0-4B95-AB31-B13691A5FFBB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ControlSystemsTests</RootNamespace>
-    <AssemblyName>ControlSystemsTests</AssemblyName>
+    <RootNamespace>IndependentTests</RootNamespace>
+    <AssemblyName>IndependentTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -41,16 +41,8 @@
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
-  <Choose>
-    <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-      </ItemGroup>
-    </When>
-    <Otherwise />
-  </Choose>
   <ItemGroup>
-    <Compile Include="ControlSystemsTests\SimplePIDTest.cs" />
+    <Compile Include="IndependentTests\SimplePIDTest.cs" />
     <Compile Include="ExtrasTests\UtilityTest.cs" />
     <Compile Include="FlowControlTests\ChangeTriggerTest.cs" />
     <Compile Include="FlowControlTests\EdgeTriggerTest.cs" />
@@ -67,7 +59,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CSharp Robotics Library\CSharpRoboticsLib.csproj">
+    <ProjectReference Include="..\CSharpRoboticsLibrary\CSharpRoboticsLib.csproj">
       <Project>{08792b9c-ab04-4fd0-a52a-d3a864d9758a}</Project>
       <Name>CSharpRoboticsLib</Name>
     </ProjectReference>
