--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,10 @@ install:
     7z x -oC:\Tools\NUnit3 nunit-3.0.0.zip > NUL
 
     set PATH=C:\Tools\NUnit3\bin;%PATH%
+
+    nuget Sources Add -Name NetworkTables -Source https://ci.appveyor.com/nuget/networktablescore-appveyor
+
+    nuget Sources Add -Name WPILib -Source https://ci.appveyor.com/nuget/wpilib-appveyor
 before_build:
 - cmd: nuget restore
 build:
@@ -23,8 +27,8 @@ build:
 test_script:
 - nuget install OpenCover -Version 4.6.166 -OutputDirectory packages
 
-- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\IndependentTests\Output\IndependentTests.dll --framework=net-4.5 --where "cat != TimeBased" -filter:"+[*]* -[*]*Test" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput -returntargetcode
-- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\IndependentTests\Output\IndependentTests.dll --framework=net-4.5 --where "cat == TimeBased"" -filter:"+[*]* -[*]*Test" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput
+- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\IndependentTests\Output\IndependentTests.dll --framework=net-4.5 --where "cat!=TimeBased"" -filter:"+[*]* -[*]*Test" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput -returntargetcode
+- .\packages\OpenCover.4.6.166\tools\OpenCover.Console.exe -register:user -target:nunit3-console.exe -targetargs:".\IndependentTests\Output\IndependentTests.dll --framework=net-4.5 --where "cat==TimeBased"" -filter:"+[*]* -[*]*Test" -excludebyattribute:*.ExcludeFromCodeCoverage* -output:coverage.xml -mergeoutput
 
 - cmd: >-
 
@@ -37,7 +41,7 @@ on_success:
     
     If (($env:APPVEYOR_REPO_BRANCH -eq "master") -and (!$env:APPVEYOR_PULL_REQUEST_NUMBER)) {
 
-    nuget pack "$env:APPVEYOR_BUILD_FOLDER\CSharp Robotics Library\CSharpRoboticsLib.csproj" -Properties "Configuration=Release;Platform=AnyCPU" -Symbols
+    nuget pack "$env:APPVEYOR_BUILD_FOLDER\CSharpRoboticsLibrary\CSharpRoboticsLib.csproj" -Properties "Configuration=Release;Platform=AnyCPU" -Symbols
 
     Get-ChildItem .\*.nupkg | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
     }
