--- a/IndependentTests/IndependentTests.csproj
+++ b/IndependentTests/IndependentTests.csproj
@@ -36,13 +36,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HAL, Version=2016.0.0.139, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.139\lib\net45\HAL.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NetworkTables, Version=2016.0.0.124, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.NetworkTables.2016.0.0.124\lib\net45\NetworkTables.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NIVision, Version=2016.0.0.139, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.139\lib\net45\NIVision.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.0.5797.27534, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.0.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="WPILib, Version=2016.0.0.139, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FRC.WPILib.2016.0.0.139\lib\net45\WPILib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtrasTests\AnalogueUltrasonic.cs" />
     <Compile Include="IndependentTests\SimplePIDTest.cs" />
     <Compile Include="ExtrasTests\UtilityTest.cs" />
     <Compile Include="FlowControlTests\ChangeTriggerTest.cs" />
