New autonomous base plan implemented
The plan: have a box for methods which would allow them to have a set
time out and interrupt.

This probably could be done much more efficiently, but this is what I
know how to do with my limited knowledge in threading.

I have a really long winded explanation about why I chose this method if
anyone wants any justification

--- a/IndependentTests/IndependentTests.csproj
+++ b/IndependentTests/IndependentTests.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutonomousTests\SafeActionTests.cs" />
     <Compile Include="ExtrasTests\AnalogueUltrasonic.cs" />
     <Compile Include="IndependentTests\SimplePIDTest.cs" />
     <Compile Include="ExtrasTests\UtilityTest.cs" />
