--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -69,8 +69,10 @@
   <ItemGroup>
     <Compile Include="Autonomous\Drive\Interfaces\IEncoderDrive.cs" />
     <Compile Include="Autonomous\Drive\Interfaces\IGyroscopeDrive.cs" />
+    <Compile Include="Autonomous\Drive\Interfaces\ISensorDrive.cs" />
     <Compile Include="Autonomous\Drive\Interfaces\ITankDrive.cs" />
     <Compile Include="Autonomous\SafeAction.cs" />
+    <Compile Include="Autonomous\SafeParameterAction.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
