New-ish method of doing autonomous
Same underlying method as before (methods with time-outs) but just a
different, hopefully less awful way of doing it.

Also added a project for test cases requiring the WPILib simulator.

--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -63,8 +63,7 @@
     <Compile Include="Autonomous\Drive\Interfaces\IGyroscopeDrive.cs" />
     <Compile Include="Autonomous\Drive\Interfaces\ISensorDrive.cs" />
     <Compile Include="Autonomous\Drive\Interfaces\ITankDrive.cs" />
-    <Compile Include="Autonomous\SafeAction.cs" />
-    <Compile Include="Autonomous\SafeParameterAction.cs" />
+    <Compile Include="Autonomous\TimeoutInvokeExtensions.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
