--- a/nuget.config
+++ b/nuget.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageRestore>
     <!-- Allow NuGet to download missing packages -->
@@ -17,6 +17,6 @@
   <packageSources>
     <add key="NuGet official package source" value="https://nuget.org/api/v2/" />
     <add key="NetworkTablesAppVeyor" value="https://ci.appveyor.com/nuget/networktablescore-appveyor" />
-	<add key="WPiLibAppVeyor" value="https://ci.appveyor.com/nuget/wpilib-appveyor" />
+    <add key="WPiLibAppVeyor" value="https://ci.appveyor.com/nuget/wpilib-appveyor" />
   </packageSources>
 </configuration>
