--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 before_build:
-- cmd: nuget restore
+- cmd: nuget-restore
 build:
   verbosity: minimal
 
