Did that autonomous stuff
about half way done, not counting testing

--- a/SimulatorTests/SimulatorTests.csproj
+++ b/SimulatorTests/SimulatorTests.csproj
@@ -72,6 +72,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AutonomousTests\TankDriveTests.cs" />
+    <Compile Include="ExtrasTests\DriveEncodersTests.cs" />
     <Compile Include="ExtrasTests\EnhancedDigitalInputTests.cs" />
     <Compile Include="ExtrasTests\EnhancedEncoderTests.cs" />
     <Compile Include="ExtrasTests\ManagedCompressorTests.cs" />
