--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -67,7 +67,9 @@
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
+    <Compile Include="Extras\DriveEncoders.cs" />
     <Compile Include="Extras\EnhancedDigitalInput.cs" />
+    <Compile Include="Extras\EnhancedDriveEncoders.cs" />
     <Compile Include="Extras\EnhancedEncoder.cs" />
     <Compile Include="Extras\ManagedCompressor.cs" />
     <Compile Include="Extras\RampMotor.cs" />
