--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -79,11 +79,10 @@
     <Compile Include="FlowControl\Toggle.cs" />
     <Compile Include="FlowControl\WaitByCallCount.cs" />
     <Compile Include="FlowControl\WaitByTime.cs" />
-    <Compile Include="NILabview\DeltaTime.cs" />
-    <Compile Include="NILabview\Derivative.cs" />
-    <Compile Include="NILabview\InputFilter.cs" />
-    <Compile Include="NILabview\Integral.cs" />
-    <Compile Include="NILabview\OrderDerivative.cs" />
+    <Compile Include="FlowControl\DeltaTime.cs" />
+    <Compile Include="ControlSystems\Derivative.cs" />
+    <Compile Include="ControlSystems\InputFilter.cs" />
+    <Compile Include="ControlSystems\Integral.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
