--- a/IndependentTests/IndependentTests.csproj
+++ b/IndependentTests/IndependentTests.csproj
@@ -60,17 +60,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutonomousTests\TimeoutInvokeTests.cs" />
-    <Compile Include="IndependentTests\SimplePIDTest.cs" />
+    <Compile Include="ControlSystemsTests\SimplePIDTest.cs" />
     <Compile Include="ExtrasTests\UtilityTest.cs" />
     <Compile Include="FlowControlTests\ChangeTriggerTest.cs" />
     <Compile Include="FlowControlTests\EdgeTriggerTest.cs" />
     <Compile Include="FlowControlTests\ToggleTest.cs" />
     <Compile Include="FlowControlTests\WaitByCallCountTest.cs" />
     <Compile Include="FlowControlTests\WaitByTimeTest.cs" />
-    <Compile Include="NILabviewTests\DeltaTimeTest.cs" />
-    <Compile Include="NILabviewTests\DerivativeTest.cs" />
-    <Compile Include="NILabviewTests\InputFilterTest.cs" />
-    <Compile Include="NILabviewTests\IntegralTest.cs" />
+    <Compile Include="FlowControlTests\DeltaTimeTest.cs" />
+    <Compile Include="ControlSystemsTests\DerivativeTest.cs" />
+    <Compile Include="ControlSystemsTests\InputFilterTest.cs" />
+    <Compile Include="ControlSystemsTests\IntegralTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +82,7 @@
       <Name>CSharpRoboticsLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
