--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Autonomous\Drive\ISensorDrive.cs" />
     <Compile Include="Autonomous\Drive\ITankDrive.cs" />
     <Compile Include="Autonomous\TimeoutInvokeExtensions.cs" />
+    <Compile Include="ControlSystems\IPIDController.cs" />
+    <Compile Include="ControlSystems\Setpoint.cs" />
+    <Compile Include="ControlSystems\SetpointProfile.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
