having trouble with setpointprofile
among other things:
Made RampMotor non-generic
added an OutputRateLimit.... unless I did that last commit. It says it's
all new...
more autonomous work
angle wrapping in Utility

--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Autonomous\Drive\ITankDrive.cs" />
     <Compile Include="Autonomous\TimeoutInvokeExtensions.cs" />
     <Compile Include="ControlSystems\IPIDController.cs" />
+    <Compile Include="ControlSystems\OutputRateLimit.cs" />
     <Compile Include="ControlSystems\Setpoint.cs" />
     <Compile Include="ControlSystems\SetpointProfile.cs" />
     <Compile Include="ControlSystems\SimplePID.cs" />
