--- a/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
+++ b/CSharpRoboticsLibrary/CSharpRoboticsLib.csproj
@@ -59,11 +59,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Autonomous\Drive\IEncoderDrive.cs" />
-    <Compile Include="Autonomous\Drive\IGyroscopeDrive.cs" />
-    <Compile Include="Autonomous\Drive\ISensorDrive.cs" />
-    <Compile Include="Autonomous\Drive\ITankDrive.cs" />
-    <Compile Include="Autonomous\TimeoutInvokeExtensions.cs" />
+    <Compile Include="Drive\Interfaces\IEncoderDrive.cs" />
+    <Compile Include="Drive\Interfaces\IGyroscopeDrive.cs" />
+    <Compile Include="Drive\Interfaces\ISensorDrive.cs" />
+    <Compile Include="Drive\Interfaces\ITankDrive.cs" />
+    <Compile Include="TimeoutInvokeExtensions.cs" />
     <Compile Include="ControlSystems\IPIDController.cs" />
     <Compile Include="ControlSystems\OutputRateLimit.cs" />
     <Compile Include="ControlSystems\Setpoint.cs" />
@@ -71,9 +71,9 @@
     <Compile Include="ControlSystems\SimplePID.cs" />
     <Compile Include="ControlSystems\SimplePIDSystem.cs" />
     <Compile Include="Extras\AnalogueUltrasonic.cs" />
-    <Compile Include="Extras\DriveEncoders.cs" />
+    <Compile Include="Drive\DriveEncoders.cs" />
     <Compile Include="Extras\EnhancedDigitalInput.cs" />
-    <Compile Include="Extras\EnhancedDriveEncoders.cs" />
+    <Compile Include="Drive\EnhancedDriveEncoders.cs" />
     <Compile Include="Extras\EnhancedEncoder.cs" />
     <Compile Include="Extras\ManagedCompressor.cs" />
     <Compile Include="Extras\RampMotor.cs" />
